# POI-Project

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
poi_importer/: asgi.py  settings.py  urls.py  wsgi.py
poi_importer_app/: admin.py  apps.py  models.py
poi_importer_app/management/commands/: import_pois.py
poi_importer_app/migrations/: 0001_initial.py
